base html and css styles set up

--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Craig's Calculator</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://kit.fontawesome.com/00d0b65b3c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
+    <div id="main-container">
+        <div id="answer-container">
+            <span id="answer">0</span>
+        </div>
+        <div id="calc-container">
+            <span class="calc-class">CE</span>
+            <span class="calc-class">C</span>
+            <i class="fas fa-backspace grid-icon"></i>            
+            <i class="fas fa-divide grid-icon"></i>
+            <span class="numbers">7</span>
+            <span class="numbers">8</span>
+            <span class="numbers">9</span>
+            <i class="fas fa-times grid-icon"></i>
+            <span class="numbers">4</span>
+            <span class="numbers">5</span>
+            <span class="numbers">6</span>
+            <i class="fas fa-minus grid-icon"></i>
+            <span class="numbers">1</span>
+            <span class="numbers">2</span>
+            <span class="numbers">3</span>
+            <i class="fas fa-plus grid-icon"></i>
+            <span class="calc-class grid-plus-minus"><i id="grid-negate" class="fas fa-plus"></i><i class="fas fa-minus"></i></span>
+            <span class="numbers">0</span>
+            <span class="numbers">.</span>
+            <i class="fas fa-equals grid-icon"></i>
+        </div>
+
+
+
+
+    </div>
+
+    <script src="index.js"></script>
     
 </body>
 </html>
