--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
             <span id="answer">0</span>
         </div>
         <div id="calc-container">
-            <span class="calc-class">CE</span>
-            <span class="calc-class">C</span>
-            <i class="fas fa-backspace grid-icon"></i>            
-            <i class="fas fa-divide grid-icon"></i>
-            <span class="numbers">7</span>
-            <span class="numbers">8</span>
-            <span class="numbers">9</span>
-            <i class="fas fa-times grid-icon"></i>
-            <span class="numbers">4</span>
-            <span class="numbers">5</span>
-            <span class="numbers">6</span>
-            <i class="fas fa-minus grid-icon"></i>
-            <span class="numbers">1</span>
-            <span class="numbers">2</span>
-            <span class="numbers">3</span>
-            <i class="fas fa-plus grid-icon"></i>
-            <span class="calc-class grid-plus-minus"><i id="grid-negate" class="fas fa-plus"></i><i class="fas fa-minus"></i></span>
-            <span class="numbers">0</span>
-            <span class="numbers">.</span>
-            <i class="fas fa-equals grid-icon"></i>
+            <span class="calc-class" id="clear">CE</span>
+            <span class="calc-class" id="clear2">C</span>
+            <i class="fas fa-backspace grid-icon" id="backspace"></i>            
+            <i class="fas fa-divide grid-icon" id="divide"></i>
+            <span class="numbers" id="num7">7</span>
+            <span class="numbers" id="num8">8</span>
+            <span class="numbers" id="num9">9</span>
+            <i class="fas fa-times grid-icon" id="times"></i>
+            <span class="numbers" id="num4">4</span>
+            <span class="numbers" id="num5">5</span>
+            <span class="numbers" id="num6">6</span>
+            <i class="fas fa-minus grid-icon" id="minus"></i>
+            <span class="numbers" id="num1">1</span>
+            <span class="numbers" id="num2">2</span>
+            <span class="numbers" id="num3">3</span>
+            <i class="fas fa-plus grid-icon" id="plus"></i>
+            <span class="calc-class grid-plus-minus" id="plus-minus"><i id="grid-negate" class="fas fa-plus"></i><i class="fas fa-minus"></i></span>
+            <span class="numbers" id="num0">0</span>
+            <span class="numbers" id="dot">.</span>
+            <i class="fas fa-equals grid-icon" id="equals"></i>
         </div>
 
 
@@ -46,3 +46,6 @@
     
 </body>
 </html>
+
+
+<!-- Tie every number to 
